UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/ApplicableProducts__c.field-meta.xml
<CustomField>
    <fullName>ApplicableProducts__c</fullName>
    <inlineHelpText>Applicable Products takes precedence</inlineHelpText>
    <label>Applicable Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>