UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>