UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/Excluded_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Product_Type__c</fullName>
    <description>Added to put products that are to be excluded from specific validations</description>
    <inlineHelpText>Insert the product for which you don&apos;t want to fire the validation.</inlineHelpText>
    <label>Excluded Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>