UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field API Name</description>
    <inlineHelpText>prefix:
@ for attribute</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>