UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>