UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, the rule will only run if there is a value in the field/attribute</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>