UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <inlineHelpText>If you select regex, value will be used as the regex expression</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>regex</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
            <value>
                <fullName>exists</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>