UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/ValidateOn__c.field-meta.xml
<CustomField>
    <fullName>ValidateOn__c</fullName>
    <label>Validate On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit Order</fullName>
                <default>true</default>
                <label>Submit Order</label>
            </value>
            <value>
                <fullName>Request SE Review</fullName>
            </value>
            <value>
                <fullName>Submit UCF to QA Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>