UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>prefix:
@ for attribute
$ for field API name</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>