UCF-APR2.4/ftr main/force-app/main/default/objects/CustomFieldValidation__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>ErrorMessage__c</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <columns>ExcludeProducts__c</columns>
    <columns>ApplicableProducts__c</columns>
    <columns>ValidateOn__c</columns>
    <columns>IsRequired__c</columns>
    <columns>IsEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>